remoção de alguns campos quando lote for ebay.

--- a/html/templates/store_lot_details.html
+++ b/html/templates/store_lot_details.html
@@ -95,15 +95,11 @@
                       <p class="nome"><strong>{% trans "Nome" %}:</strong><br> {{ product.name }}</p>
                   </div>
 
-                  <!------------------- Comentar se ebay inicio ------------------->
                   {% if lot.destination == 1 %}
                   <div class="col-md-12">
                       <p><strong>{% trans "Rank" %}:</strong> {{ product.rank|localize }}%</p>
                   </div>
                   {% endif %}
-
-
-                  <!------------------- Comentar se ebay fim --------------------->
 
                   <div class="col-md-12">
                       <p>
@@ -128,8 +124,7 @@
                       <p><strong>{% trans "Quantidade" %}:</strong><br> {{ product.quantity }}</p>
                   </div>
 
-                  <!--------- Comentar se ebay inicio --------->
-
+                  {% if lot.destination == 1 %}
                   <div class="col-md-6">
                       <p><strong>{% trans "Valor de Venda" %}:</strong><br> U$ {{ product.sell_price|localize }}</p>
                   </div>
@@ -179,8 +174,7 @@
                   <div class="col-md-6">
                       <p><strong>{% trans "ROI" %} (%):</strong><br> {{ product.roi|localize }}</p>
                   </div>
-
-                  <!----------------- Comentar se ebay fim -------------->
+                  {% endif %}
 
                    <!-- Campo observação-->
                   <div class="col-md-12">
@@ -188,8 +182,7 @@
                   </div>
 
 
-                  <!--------- Comentar se ebay inicio --------->
-
+                  {% if lot.destination == 1 %}
                   {% if product.url %}
                   <!-- btn link para amazon -->
                   <div class="col-md-12">
@@ -203,8 +196,7 @@
                         </a>
                   </div>
                   {% endif %}
-
-                  <!----------------- Comentar se ebay fim -------------->
+                  {% endif %}
 
               </div>
           {% if forloop.counter|divisibleby:3 or forloop.last %}
