--- a/html/templates/invoice.html
+++ b/html/templates/invoice.html
@@ -54,15 +54,15 @@
         <img src="/static/img/default-voi.png" class="logo-invoice" />
         <ul class="order-details dados">
             <li>https://lots.voiservices.com</li>
-            <li>(978) 871-7979</li>
+            <li>(978) 992-8417</li>
             <li> support@voiservices.com</li>
             <li> 920 Lafayette road, 204-B<br>Seabrook, NH 03874</li>
         </ul>
         <ul class="order-details pay">
-            <li><strong>INVOICE NUMBER: </strong> 00010234</li>
-            <li><strong>ORDER:</strong> 00010222</li>
-            <li><strong>DATE:</strong> 09/09/2018</li>
-            <li><strong>DUE:</strong> 09/09/2018</li>
+            <li><strong>INVOICE NUMBER: </strong> 0001054</li>
+            <li><strong>ORDER:</strong> 0001054</li>
+            <li><strong>DATE:</strong> 08/23/2018</li>
+            <li><strong>DUE:</strong> 08/23/2018</li>
             <li><strong>PAYMENT METHOD:</strong> PayPal</li>
         </ul>
     </div>
@@ -71,16 +71,16 @@
             <br>
             <table class="table table-striped table-bordered">
               <thead>
-                <tr>
+                <tr><!--
                     <td width="50%">
-                        <strong>SHIP TO</strong>
+                    <!--    <strong>SHIP TO</strong>
                         <p>Fudoncio Camargo</p>
                         <p>920 Lafayette road, 204-B<br>Seabrook - NH<br> 03974</p>
-                    </td>
+                    </td>-->
                     <td>
-                        <strong>BILL TO</strong>
-                        </br><p>Fudoncio Camargo</p>
-                        <p>920 Lafayette road, 204-B<br>Seabrook - NH<br> 03974 (Endereço cadastrado na plataforma)</p>
+                        <strong>BILL TO:</strong><br>
+                        </br><p><strong>Elaine Mauricio da Cruz</strong><br>
+                        Rua Industrial, 300 casa 12<br>Vila Bela, São Paulo - SP<br> 03203-010 <br> Brazil</p>
                     </td>
                 </tr>
               </thead>
@@ -100,10 +100,10 @@
                       <strong>B.O.L</strong><br><p class="null">null</p>
                   </td>
                     <td>
-                        <strong>CONTACT</strong><br><p>PrimeiroNome</p>
+                        <strong>CONTACT</strong><br><p>Elaine</p>
                     </td>
                     <td>
-                        <strong>PHONE</strong></br><p>99223434</p>
+                        <strong>PHONE</strong></br><p class="null">null</p>
                     </td>
                     <td>
                         <strong>FAX</strong><br><p class="null">null</p>
@@ -122,55 +122,89 @@
             <table class="table table-striped table-bordered">
               <thead>
                 <tr class="black">
-                  <td>
+                  <td class="center">
                       <strong>QTY ORDERED</strong>
                   </td>
-                  <td>
+                  <td class="center">
                       <strong>SKU / UPC</strong>
                   </td>
                     <td>
                         <strong>DESCRIPTION</strong>
                     </td>
-                    <td>
+                    <td class="center">
                         <strong>UNIT PRICE</strong>
                     </td>
-                    <td>
+                    <td class="center">
                         <strong>TOTAL PRICE</strong>
                     </td>
                 </tr>
               </thead>
                 <tr>
-                  <td>
-                      03
+                  <td class="center">
+                      02
                   </td>
-                  <td>
-                      S0983976946522
+                  <td class="center">
+                      051071926621
                   </td>
                     <td>
-                        CALÇA LEE 16 S
+                        LEE Mens Big-Tall Regular Fit Straight Leg Jean, Vintage, 52W x 34L
                     </td>
-                    <td>
-                        $11.29
+                    <td class="center">
+                        $14.29
                     </td>
-                    <td>
-                        $33.87
+                    <td class="center">
+                        $28.58
                     </td>
                 </tr>
                 <tr>
-                  <td>
-                      04
+                  <td class="center">
+                      02
                   </td>
-                  <td>
-                      S0983976946522
+                  <td class="center">
+                      051071926614
                   </td>
                     <td>
-                        Sutiã tal 38DD
+                        LEE Mens Big-Tall Regular Fit Straight Leg Jean, Vintage, 52W x 32L
                     </td>
-                    <td>
-                        $5.29
+                    <td class="center">
+                        $14.29
                     </td>
+                    <td class="center">
+                        $28.58
+                    </td>
+                </tr>
+                <tr>
+                  <td class="center">
+                      01
+                  </td>
+                  <td class="center">
+                      051071926454
+                  </td>
                     <td>
-                        $20.87
+                        LEE Mens Big-Tall Regular Fit Straight Leg Jean, Vintage, 44W x 30L
+                    </td>
+                    <td class="center">
+                        $16.29
+                    </td>
+                    <td class="center">
+                        $16.29
+                    </td>
+                </tr>
+                <tr>
+                  <td class="center">
+                      01
+                  </td>
+                  <td class="center">
+                      051071926584
+                  </td>
+                    <td>
+                        LEE Mens Big-Tall Regular Fit Straight Leg Jean, Vintage, 50W x 32L
+                    </td>
+                    <td class="center">
+                        $16.29
+                    </td>
+                    <td class="center">
+                        $16.29
                     </td>
                 </tr>
             </table>
@@ -189,13 +223,13 @@
                       <strong>PAID BY: </strong> PayPal
                   </td>
                     <td>
-                        <strong>MERCHANDISE: </strong> $52.00
+                        <strong>MERCHANDISE: </strong> $89.74
                     </td>
                     <td>
                         <strong>TAX: </strong> $0.00
                     </td>
                     <td>
-                        <strong>TOTAL AMOUNT: </strong> $52.00
+                        <strong>TOTAL AMOUNT: </strong> $89.74
                     </td>
                 </tr>
               </thead>
