--- a/html/templates/store_lot_details.html
+++ b/html/templates/store_lot_details.html
@@ -46,7 +46,15 @@
                   <p><strong>{% trans "Lucro" %} <span class="help help-tooltip help-icon" title="{% trans 'Soma de todos os &quot;Lucros Totais&quot; dos produtos do lote.' %}"></span>: </strong> U$ {{ lot.profit|localize }}</p>
               </div>
               <div class="col-md-3">
-                  <p><strong>{% trans "ROI médio" %} <span class="help help-tooltip help-icon" title="{% trans 'Soma de todos os &quot;ROI&quot; divididos pelo número de produtos do lote.' %}"></span>: </strong> {{ lot.average_roi|localize }}%</p>
+                  <p>
+                      <strong>
+                          {% if lot.destination == 1 %}
+                          {% trans "ROI médio" %} <span class="help help-tooltip help-icon" title="{% trans 'Soma de todos os &quot;ROI&quot; divididos pelo número de produtos do lote.' %}"></span>:
+                          {% else %}
+                          {% trans "Retorno Estimado" %} <span class="help help-tooltip help-icon" title="{% trans 'Soma de todos os &quot;Retornos Estimados&quot; divididos pelo número de produtos do lote.' %}"></span>:
+                          {% endif %}
+                      </strong> {{ lot.average_roi|localize }}%
+                  </p>
 {% comment %}
                   <p><strong>{% trans "Redirecionamento" %} <span class="help help-tooltip help-icon" title="{% trans 'Este valor é somente informativo, ele será pago no processo de criação do envio por esta plataforma.' %}"></span>: </strong> U$ {{ lot.redirect_cost|localize }}</p>
 {% endcomment %}
@@ -95,15 +103,11 @@
                       <p class="nome"><strong>{% trans "Nome" %}:</strong><br> {{ product.name }}</p>
                   </div>
 
-                  <!------------------- Comentar se ebay inicio ------------------->
                   {% if lot.destination == 1 %}
                   <div class="col-md-12">
                       <p><strong>{% trans "Rank" %}:</strong> {{ product.rank|localize }}%</p>
                   </div>
                   {% endif %}
-
-
-                  <!------------------- Comentar se ebay fim --------------------->
 
                   <div class="col-md-12">
                       <p>
@@ -128,8 +132,7 @@
                       <p><strong>{% trans "Quantidade" %}:</strong><br> {{ product.quantity }}</p>
                   </div>
 
-                  <!--------- Comentar se ebay inicio --------->
-
+                  {% if lot.destination == 1 %}
                   <div class="col-md-6">
                       <p><strong>{% trans "Valor de Venda" %}:</strong><br> U$ {{ product.sell_price|localize }}</p>
                   </div>
@@ -179,17 +182,14 @@
                   <div class="col-md-6">
                       <p><strong>{% trans "ROI" %} (%):</strong><br> {{ product.roi|localize }}</p>
                   </div>
-
-                  <!----------------- Comentar se ebay fim -------------->
+                  {% endif %}
 
                    <!-- Campo observação-->
                   <div class="col-md-12">
                         <p><strong>{% trans "Observação" %}:</strong><br> {% if product.notes %}{{product.notes}}.{% endif %}</p>
                   </div>
 
-
-                  <!--------- Comentar se ebay inicio --------->
-
+                  {% if lot.destination == 1 %}
                   {% if product.url %}
                   <!-- btn link para amazon -->
                   <div class="col-md-12">
@@ -203,8 +203,7 @@
                         </a>
                   </div>
                   {% endif %}
-
-                  <!----------------- Comentar se ebay fim -------------->
+                  {% endif %}
 
               </div>
           {% if forloop.counter|divisibleby:3 or forloop.last %}
