uso do novo campo upc no invoice.

--- a/html/templates/invoice.html
+++ b/html/templates/invoice.html
@@ -159,7 +159,7 @@
                       {{ product.quantity }}
                   </td>
                   <td class="center">
-                      {{ product.identifier }}
+                      {% if product.upc %}{{ product.upc }}{% else %}-{% endif %}
                   </td>
                     <td>
                         {{ product.name }}
