relatorio de produtos x invoices

--- a/store/templates/admin/store/productreport/change_list_results.html
+++ b/store/templates/admin/store/productreport/change_list_results.html
@@ -46,6 +46,11 @@
     <td></td>
     <td></td>
     <td></td>
+    <td>{{ cl.product_cost_sum }}</td>
+    <td>{{ cl.voi_value_sum }}</td>
+    <td>{{ cl.paypal_value_sum }}</td>
+    <td>{{ cl.transfer_value_sum }}</td>
+    <td>{{ cl.voi_profit_value_sum }}</td>
 </tr>
 </tbody>
 </table>
