relatorio de produtos x invoices

--- a/store/templates/admin/store/productreport/change_list_results.html
+++ b/store/templates/admin/store/productreport/change_list_results.html
@@ -42,11 +42,12 @@
 <tr class="{% cycle class_row %}">
     <td>TOTAIS</td>
     <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
     <td>{{ cl.product_quantity_sum }}</td>
-    <td></td>
-    <td></td>
-    <td></td>
     <td>{{ cl.product_cost_sum }}</td>
+    <td>{{ cl.total_product_cost_value_sum }}</td>
     <td>{{ cl.voi_value_sum }}</td>
     <td>{{ cl.paypal_value_sum }}</td>
     <td>{{ cl.transfer_value_sum }}</td>
