--- a/html/templates/base_shipment_details.html
+++ b/html/templates/base_shipment_details.html
@@ -51,7 +51,7 @@
                         <br>
                         {{ collaborator.address_2 }}
                         {% else %}
-                        920 Lafayette Rd
+                        Hampton, New Hampshire, 03842
                         <br>
                         Seabrook, NH 03874
                         {% endif %}
