--- a/html/templates/invoice.html
+++ b/html/templates/invoice.html
@@ -56,7 +56,7 @@
             <li>https://lots.voiservices.com</li>
             <li>(978) 992-8417</li>
             <li> support@voiservices.com</li>
-            <li> 920 Lafayette road, 204-B<br>Seabrook, NH 03874</li>
+            <li> 1 Lafayette Rd - Building 1, Door D<br>Hampton, New Hampshire, 03842</li>
         </ul>
         <ul class="order-details pay">
             {% calculate_invoice_number lot as invoice_number %}
@@ -78,7 +78,7 @@
                     <td width="50%">
                     <!--    <strong>SHIP TO</strong>
                         <p>Fudoncio Camargo</p>
-                        <p>920 Lafayette road, 204-B<br>Seabrook - NH<br> 03974</p>
+                        <p><br> 03974</p>
                     </td>-->
                     <td>
                         <strong>BILL TO:</strong><br>
