--- a/html/templates/product_stock_fbm.html
+++ b/html/templates/product_stock_fbm.html
@@ -96,9 +96,9 @@
                       <br>
                       {{ filter_values.collaborator.address_2 }}
                       {% else %}
-                      920 Lafayette Rd
+                      1 Lafayette Rd - Building 1, Door D
                       <br>
-                      Seabrook, NH 03874
+                      Hampton, New Hampshire, 03842
                      {% endif %}
                  </p>
              </div>
